@@ -1,3 +1,8 @@
+2005-03-30 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+   * Testing/TestAllReadCompareDicom.cxx : now use test files (invented file
+     format) to replace 'at-run' dicom files generated by the 
+     TestAllReadCompareDicom test
+
 2005-03-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
    * src/gdcmFileHelper.cxx : remove memory leaks and bugs when writing files
 
